<resources>
    <string name="app_name">XiVPN</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscription">Subscription</string>
    <string name="proxies">Proxies</string>
    <string name="timeout">Timeout</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="label">Label</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="conflict_label">A proxy with this label already exists.</string>
    <string name="label_help_text">Enter a custom label for the new proxy</string>
    <string name="url">URL</string>
    <string name="empty_label_or_url">Label and url can not be empty.</string>
    <string name="update">Update</string>
    <string name="refresh">Refresh</string>
    <string name="subscription_updating">Updating subscriptions…</string>
    <string name="subscription_error">"Could not update subscription: "</string>
    <string name="subscription_updated">"Subscription updated: "</string>
    <string name="report_bug_github">Report bug on Github</string>
    <string name="subscription_already_exists">Subscription with the same label already exists</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_summary">Get source code on GitHub</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="settings">Settings</string>
    <string name="xray_version">Xray Version</string>
    <string name="about">About</string>
    <string name="black_background">Black background</string>
    <string name="appearance">Appearance</string>
    <string name="restart_to_apply">Restart the app for this setting to take effect</string>
    <string name="black_background_summary">Use pure black background in dark theme</string>
    <string name="app_version">App Version</string>
    <string name="vpn_settings">VPN Settings</string>
    <string name="log_level">Log Level</string>
    <string name="logs">Write logs to disk</string>
    <string name="logs_summary">"Write logs to files. To view log files, use a file explorer app (e.g. Material files) and add XiVPN as an external storage. "</string>
    <string name="rules">Rules</string>
    <string name="edit_rule">Edit rule</string>
    <string name="domains">Domains</string>
    <string name="one_per_line">One per line</string>
    <string name="ips">IPs</string>
    <string name="port">Port</string>
    <string name="network">Network</string>
    <string name="protocol">Protocols</string>
    <string name="outbound">Outbound</string>
    <string name="new_rule">New Rule</string>
    <string name="sniffing">Sniffing</string>
    <string name="sniffing_summary">Sniffing domains from traffic data and replace the destination address by the sniffed domain.</string>
    <string name="sniffing_route_only">Sniffing route only</string>
    <string name="sniffing_route_only_summary">Keep the original destination address and only use sniffed domain for routing.</string>
    <string name="geoip_geosite">Geoip / Geosite</string>
    <string name="v2fly_geoip">v2fly/geoip</string>
    <string name="v2fly_geoip_cn">v2fly/geoip CN</string>
    <string name="dbip">Geoip data provided by db-ip.com:</string>
    <string name="ipinfo_geoip">Exclude0122/geoip</string>
    <string name="ipinfo">Geoip data provided by ipinfo.io:</string>
    <string name="ipinfo_geoip_cn">Exclude0122/geoip CN</string>
    <string name="ipinfo_geoip_ir">Exclude0122/geoip IR</string>
    <string name="ipinfo_geoip_ru">Exclude0122/geoip RU</string>
    <string name="custom">Custom</string>
    <string name="custom_geoip_hint">Enter the URL for custom geoip file</string>
    <string name="geoip">Geoip</string>
    <string name="geosite">Geosite</string>
    <string name="v2fly_dlc">v2fly/domain-list-community</string>
    <string name="custom_geosite_hint">Enter the URL for custom geoip file</string>
    <string name="downloading_geo_assets">Downloading geo assets…</string>
    <string name="downloading_error">Download error</string>
    <string name="warning">Warning</string>
    <string name="geoip_not_downloaded"><![CDATA[The Geoip / Geosite database is not downloaded but is being used in routing rules.]]></string>
    <string name="download">Download</string>
    <string name="proxy_chain">Proxy chain</string>
    <string name="select_proxy">Select proxy</string>
    <string name="proxy_chain_empty">Proxy chain must not be empty</string>
    <string name="proxy_chain_not_found">Proxy chain \"%s\": proxy \"%s\" not found</string>
    <string name="proxy_chain_nesting_error">Proxy chain \"%s\": Nested proxy chains are not supported</string>
    <string name="import_form_clipboard">Import from clipboard</string>
    <string name="share_link_example">ss://</string>
    <string name="invalid_link">Invalid link</string>
    <string name="proxy_added">Proxy added</string>
    <string name="split_tunnel">Split Tunnel</string>
    <string name="split_tunnel_summary">Blacklist: Everything except selected apps are proxied.\nWhitelist: Only selected apps are proxied.</string>
    <string name="split_tunnel_apps">Apps</string>
    <string name="search">Search</string>
</resources>