<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/vpn_settings">

        <ListPreference
            app:defaultValue="warning"
            android:entries="@array/log_levels"
            android:entryValues="@array/log_levels"
            app:singleLineTitle="true"
            android:title="@string/log_level"
            app:iconSpaceReserved="false"
            app:key="log_level" />

        <CheckBoxPreference
            app:defaultValue="false"
            android:title="@string/logs"
            app:iconSpaceReserved="false"
            app:key="logs"
            app:summary="@string/logs_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/appearance">
        <CheckBoxPreference
            android:title="@string/black_background"
            app:iconSpaceReserved="false"
            app:key="black_background"
            app:summary="@string/black_background_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about">

        <Preference
            app:iconSpaceReserved="false"
            app:key="privacy_policy"
            app:title="@string/privacy_policy" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="feedback"
            app:summary="@string/feedback_summary"
            app:title="@string/feedback" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="source_code"
            app:summary="@string/source_code_summary"
            app:title="@string/source_code" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="open_source_licenses"
            app:title="@string/open_source_licenses" />

        <Preference
            android:title="@string/xray_version"
            app:iconSpaceReserved="false"
            app:key="xray_version"
            app:summary="" />

        <Preference
            android:title="@string/app_version"
            app:iconSpaceReserved="false"
            app:key="app_version"
            app:summary="" />


    </PreferenceCategory>

</PreferenceScreen>